# RustFileManager

./: README.md
file_manager_cli/: Cargo.toml
file_manager_cli/src/: main.rs
